crates/uitest/fixtures/ty_check/method_bound/arg_bound.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/method_bound/arg_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ arg_bound.fe:62:5
   │
62 │     extract(s)
   │     ^^^^^^^ `S` doesn't implement `Extract`
